--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -16,7 +16,7 @@
 
 h1 {
     text-align: center;
-    margin-bottom: 80px;
+    /* margin-bottom: 80px; */
     font-size: 50px;
 }
 
@@ -26,18 +26,20 @@ h2 {
 }
 
 .app-Dropdown-div {
+    background-color: #FFFFFF;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    width: 80%;
+    width: 100%;
     margin: auto;
     height: 80px;
     z-index: 1000;
 }
 
 .app-Dropdown {
-    border-radius: 12px;
-    width: 100%;
-    padding: 2px;
+    border-radius: 15px;
+    width: 60%;
+    margin: auto;
+    top: 20px;
     z-index: 1000;
 }
