[UPT] - Text + description

--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -32,9 +32,20 @@ h2 {
     position: sticky;
     top: 0;
     width: 100%;
+    font-size: 22px;
     margin: auto;
     height: 80px;
+    text-align: center;
     z-index: 1000;
+}
+
+.app-Dropdown-scatter {
+    background-color: #FFFFFF;
+    position: relative;
+    width: 70%;
+    margin: auto;
+    height: 70px;
+    z-index: 100;
 }
 
 .app-Dropdown {
