--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -26,6 +26,12 @@ h2 {
     margin-bottom: 30px;
 }
 
+.app-intro {
+    width: 80%;
+    margin: auto;
+    font-size: 20px;
+}
+
 .app-Dropdown-div {
     background-color: #FFFFFF;
     position: -webkit-sticky;
